--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 * {
-    margin: 0;
-    padding: 0;
+
+    font-family: 'Nunito Sans', sans-serif;
 }
 
 body {
@@ -54,7 +54,6 @@ h2 {
     text-align: center;
     margin: 12px;
     font-size: 18px;
-    font-weight: bold;
 }
 
 /*Fonts*/
@@ -65,5 +64,53 @@ h2 {
     margin: 20px 10px;
 }
 
+.font p {
+    line-height: 30px;
+}
+
+.font-label {
+    text-decoration: underline;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.italic {
+    font-style: italic;
+}
+
+.source-code-pro p {
+    font-family: 'Source Code Pro';
+}
+
+.poppins p {
+    font-family: Poppins;
+}
+
 /*Text Styles*/
 
+.head1 h1 {
+    font-weight: 700;
+    font-size: 26px;
+    margin: 30px 10px;
+}
+
+.head2 h2 {
+    font-weight: 500;
+    font-size: 18px;
+    font-family: 'Poppins';
+    margin: 30px 10px;
+}
+
+.paragraph p {
+    font-weight: 400;
+    font-size: 14px;
+    font-family: 'Poppins';
+    margin: 30px 10px;
+}
+
+.list {
+    margin-top: 30px;
+    margin-left: 20px;
+}
